tests/baselines/reference/importAnImport.errors.txt
==== tests/cases/compiler/importAnImport.ts (1 errors) ====
    module c.a.b {
        import ma = a;
    }
    
    module m0 {
        import m8 = c.a.b.ma;
                          ~~
!!! importAnImport.ts(6,23): error TS2178: Could not find symbol 'ma' in module 'c.a.b'.
    }